# REST-API-Declarative-Framework

./: README.md  pyproject.toml
src/RapidDevApp/: __init__.py  auth.py  context.py  crud.py  decorators.py  errors.py  hooks.py  registry.py  requirements.txt  serializers.py  specs.py  validation.py
src/RapidDevApp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
